<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cbcccb"
    android:padding="5dp"
    tools:context=".MainMenuActivity">

    <LinearLayout
        android:id="@+id/lnyhead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_head1"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v_userid"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvhUserid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvhName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v_groupid"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvhGroupid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnyhead">

        <Button
            android:id="@+id/btn0"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="7dp"
            android:background="@drawable/colorful"
            android:text="@string/BulletinQuery"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="7dp"
            android:background="@drawable/colorful"
            android:text="@string/Bulletis"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="7dp"
            android:background="@drawable/colorful"
            android:text="@string/AttendanceRecord"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="7dp"
            android:background="@drawable/colorful"
            android:text="@string/ReturnOnAttendance"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="7dp"
            android:background="@drawable/colorful"
            android:text="@string/AttendanceQuery"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="7dp"
            android:background="@drawable/colorful"
            android:text="@string/CommunicationBookTeacher"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="7dp"
            android:background="@drawable/colorful"
            android:text="@string/CommunicationBookStudent"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="7dp"
            android:background="@drawable/colorful"
            android:text="@string/CommunicationBookParent"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/colorful"
            android:text="@string/CommunicationBookQueryt"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:visibility="gone" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>