<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cbcccb"
    android:padding="5dp"
    tools:context="com.classroom.communicationbook.CommunicationBookTeacherMainActivity">

    <TextView
        android:id="@+id/no_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="150dp"
        android:text="目前無資料"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lnyhead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_head1"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v_userid"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvhUserid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvhName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v_groupid"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvhGroupid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnyhead">

        <LinearLayout
            android:id="@+id/lnlSel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v_class"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvClassId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/spnClassCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attendancedate"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvAttendanceDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnDatePicker"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_button_s"
                android:text="@string/b_DatePicker"
                android:textColor="@color/zxing_status_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#69A9E9"
            android:padding="3dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/h_userid"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/h_name"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/h_ThTime"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/h_StTime"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/h_PrTime"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#F9FBEF"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</android.support.constraint.ConstraintLayout>
