<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cbcccb"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context="com.classroom.bulletins.BulletinsEditActivity">

    <LinearLayout
        android:id="@+id/lnyhead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shape_head1"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v_userid"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvhUserid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvhName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v_groupid"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvhGroupid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="484dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvhSubject"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/v_Subject"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/edtSubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/v_Desciption"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/edtDesciption"
                android:layout_width="wrap_content"
                android:layout_height="128dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/v_ImplementationDate"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/edtImplementationDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/v_EffectiveDate"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/edtEffectiveDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp" />

        </LinearLayout>


        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_rect"
            android:text="確定"
            android:textColor="@android:color/background_light"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>
